Ajouté astuce à l'exercice 2.3

--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8897,7 +8897,7 @@ Error message and password prompt
 <div created="20220811133315279" modified="20220811142518463" title="$:/state/toc/Table des matières/02 Systèmes de gestion de versions (SGV)-2.02 Centralisé vs décentralisé--249536019">
 <pre>close</pre>
 </div>
-<div list="Semainier [[Table des matières]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] 2.Exercices" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8913,7 +8913,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;file:///C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8933,7 +8933,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;/C:/Users/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -8945,11 +8945,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;1920&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;3073&quot;
+            &quot;text&quot;: &quot;1080&quot;
         }
     }
 }</pre>
@@ -9480,14 +9480,14 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt loc
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/376df76d-abdc-4212-bcd0-04177264e061?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220811161557305" modified="20220825000742794" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.Exercices">
+<div created="20220811161557305" modified="20220825171112006" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.Exercices">
 <pre>''IMPORTANT:'' Une démonstration du résultat de tous les exercices ci-dessous doit être effectuée auprès de votre enseigant après complétion.
 
 # Effectuez toutes les opérations de la vidéo [[E22 420-FAH v08 SVN-2|https://web.microsoftstream.com/video/21d43fa4-d719-4d41-9ec5-54f979498347]] (''incluant les données des vidéos antérieures''), puis montrez le résultat final à votre enseignant.
 
 # Effectuez l'équivalent de toutes les opérations de l'exercice 1 ci-dessus, mais cette fois en utilisant Git au lieu de SVN.
 
-# Complétez les quatre premiers niveaux (//Séquence d'introduction//, //Montée en puissance//, //Déplacer le travail// et  //Un assortiment//) des exercices du site d'apprentissage https://learngitbranching.js.org/?locale=fr_FR .
+# Complétez les quatre premiers niveaux (//Séquence d'introduction//, //Montée en puissance//, //Déplacer le travail// et  //Un assortiment//) des exercices du site d'apprentissage https://learngitbranching.js.org/?locale=fr_FR . ''ASTUCE:'' //vous pouvez utiliser la commande `reset` pour recommencer un exercice.//
 #&gt; ''ATTENTION:'' vous devrez faire tous les exercices sur le même ordinateur+fureteur afin qu'ils soient comptabilisés! ''Vous devrez montrer à votre enseignant que les niveaux ont été complétés avec un [img width=&quot;16&quot; [https://i.imgur.com/1OaJS6E.png]].''
 &lt;/div&gt;</pre>
 </div>
