Ajouté note pour avoir arbre identique

--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8897,7 +8897,7 @@ Error message and password prompt
 <div created="20220811133315279" modified="20220811142518463" title="$:/state/toc/Table des matières/02 Systèmes de gestion de versions (SGV)-2.02 Centralisé vs décentralisé--249536019">
 <pre>close</pre>
 </div>
-<div list="Semainier [[Table des matières]] 2.Exercices" title="$:/StoryList">
+<div list="Semainier [[Table des matières]] [[2.05 Branches et fusions avec Git]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9422,7 +9422,7 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt loc
 
 &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/bbf65382-9d14-410a-bb6f-500a941345c6?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20220824221649818" modified="20220825112030103" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.05 Branches et fusions avec Git">
+<div created="20220824221649818" modified="20220825175034933" tags="[[02 Systèmes de gestion de versions (SGV)]]" title="2.05 Branches et fusions avec Git">
 <pre>!! Quelques commandes:
 * `git branch`: crée une branche
 
@@ -9434,14 +9434,11 @@ Une fois un dépôt et un client en place, on peut interagir avec le dépôt loc
 !! Théorie et pratique
 
 &gt; ''Faites ce qu'il y a dans la vidéo!''
-
-&lt;div style=&quot;vertical-align: text-top;&quot;&gt;
-
+&gt; Note: Pour voir le même arbre que dabs la vidéo, il faut cocher //View &gt; Show branchings and merges// ainsi que //View &gt; Arrows point towards merges//
 # &lt;iframe width=&quot;640&quot; height=&quot;360&quot; src=&quot;https://web.microsoftstream.com/embed/video/345b67b0-2e87-4490-928f-e5a26cc147f6?autoplay=false&amp;showinfo=true&quot; allowfullscreen style=&quot;border:none;&quot;&gt;&lt;/iframe&gt;
 
 # Faire [[l'exercice 2.3|2.Exercices]] pour voir et pratiquer davantage de théorie sur les branches et fusions avec Git.
-
-&lt;/div&gt;</pre>
+</pre>
 </div>
 <div created="20220811124349572" modified="20220811152313960" tags="[[2.02 Centralisé vs décentralisé]]" title="2.2.01 SGV centralisé">
 <pre>* Dans un SGV centralisé, il existe un dépôt central et unique des fichiers gérant les versions, qui sert de référence officielle pour tout le monde; la collaboration est donc //obligatoire//, puisque tous les utilisateurs sont forcés de partager le même dépôt de versions de fichiers:&lt;div&gt;
