--- a/420-fah-li-em.html
+++ b/420-fah-li-em.html
@@ -8927,20 +8927,20 @@ Error message and password prompt
 <div created="20220622191803003" modified="20220811115708653" title="$:/state/toc/Table des matières-02 Systèmes de contrôle de version--249536019">
 <pre>open</pre>
 </div>
-<div created="20220811132221979" modified="20220919181211584" title="$:/state/toc/Table des matières-02 Systèmes de gestion de versions (SGV)--249536019">
+<div created="20220811132221979" modified="20220922145816555" title="$:/state/toc/Table des matières-02 Systèmes de gestion de versions (SGV)--249536019">
 <pre>close</pre>
 </div>
 <div created="20220818121646096" modified="20220915152458997" title="$:/state/toc/Table des matières-02 Systèmes de gestion de versions (SGV)-1329480811">
 <pre>close</pre>
 </div>
-<div created="20220915094130369" modified="20220922105644355" title="$:/state/toc/Table des matières-03 Tests unitaires--249536019">
-<pre>open</pre>
+<div created="20220915094130369" modified="20220922145817307" title="$:/state/toc/Table des matières-03 Tests unitaires--249536019">
+<pre>close</pre>
 </div>
 <div created="20220915155322298" modified="20220915160619568" title="$:/state/toc/Table des matières-03 Tests unitaires-1329480811">
 <pre>close</pre>
 </div>
-<div created="20220919185042529" modified="20220919185042529" title="$:/state/toc/Table des matières-04 Le débogage--249536019">
-<pre>open</pre>
+<div created="20220919185042529" modified="20220922144438441" title="$:/state/toc/Table des matières-04 Le débogage--249536019">
+<pre>close</pre>
 </div>
 <div created="20220623144907257" modified="20220811132215263" title="$:/state/toc/Table des matières/01 Diagrammes de classe UML-1.02 Diagrammes de classes--249536019">
 <pre>close</pre>
@@ -8954,7 +8954,7 @@ Error message and password prompt
 <div created="20220915155325714" modified="20220915160618664" title="$:/state/toc/Table des matières/03 Tests unitaires-3.04 Quoi tester?-1329480811">
 <pre>close</pre>
 </div>
-<div list="Semainier [[Table des matières]] 3.Exercices [[04 Le débogage]] 4.Exercices [[4.02 Assertions]]" title="$:/StoryList">
+<div list="Semainier [[Table des matières]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8970,7 +8970,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;file:///D:/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-FAH-li-em.github/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -8990,7 +8990,7 @@ Error message and password prompt
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/E:/Users/Eric/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-fah-li-em.svn/420-fah-li-em.html&quot;
+            &quot;text&quot;: &quot;/D:/eric.martel/OneDrive%20-%20C%C3%A9gep%20Limoilou/svn/Cours/420-FAH%20D%C3%A9v%20info/420-FAH-li-em.github/420-fah-li-em.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -9002,11 +9002,11 @@ Error message and password prompt
         },
         &quot;$:/info/browser/screen/width&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/width&quot;,
-            &quot;text&quot;: &quot;3072&quot;
+            &quot;text&quot;: &quot;1080&quot;
         },
         &quot;$:/info/browser/screen/height&quot;: {
             &quot;title&quot;: &quot;$:/info/browser/screen/height&quot;,
-            &quot;text&quot;: &quot;1728&quot;
+            &quot;text&quot;: &quot;1920&quot;
         }
     }
 }</pre>
@@ -9836,12 +9836,12 @@ public void TestReelHasard()
 
 Évidemment, dans le cas d'éléments indéteminés, ce sera toujours du cas par cas: il n'y a pas de recette universelle, mais on doit autant que possible tenter de trouver des moyens de s'assurer qu'une méthode/classe se comporte comme attendu.</pre>
 </div>
-<div created="20220915151318656" modified="20220922110013436" tags="[[03 Tests unitaires]]" title="3.Exercices">
+<div created="20220915151318656" modified="20220922145437384" tags="[[03 Tests unitaires]]" title="3.Exercices">
 <pre>''IMPORTANT:'' Une démonstration du résultat de tous les exercices ci-dessous doit être effectuée auprès de votre enseigant après complétion.
 
 # En modifiant les classes et méthodes au besoin pour les rendre testables, ajoutez tous les tests unitaires adéquats pour les défis 2 et 6 du cours de POO 2.
 
-# Faites de même pour le défi 7 du cours de POO 2.</pre>
+# Faites de même pour le défi 7 du cours de POO 2. On veut notamment s'assurer que tous les types antérieurs fonctionnent avec les méthodes génériques.</pre>
 </div>
 <div created="20220919181344695" modified="20220919181457136" tags="[[04 Le débogage]]" title="4.01 Techniques de base">
 <pre>La technique de base pour déboguer un programme consiste à se mettre des lignes d'affichage (p.ex., des `Console.WriteLine()` ou des `MessageBox.Show()`) à différents endroits pour marquer jusqu'où un programme se rend ou surveiller l'évolution des variables. Cette technique est universelle et fonctionnera dans n'importe quel envrionnement de développement, avec n'importe quel langage.
@@ -9904,8 +9904,8 @@ Ce qui est intéressant, c'est que, contrairement à la technique de base consis
 ''Bref, on utilisera les Debug.Assert() que pour faire ce que la nom de la classe implique, c'est-à-dire faire du débogage afin de comprendre ce qui se passe.''
 &lt;/p&gt;</pre>
 </div>
-<div created="20220922104750709" modified="20220922105529471" tags="[[04 Le débogage]]" title="4.Exercices">
-<pre># Dans le défi 7 du cours de POO 2, insérez au moins cinq assertions pertinentes.</pre>
+<div created="20220922104750709" modified="20220922144415352" tags="[[04 Le débogage]]" title="4.Exercices">
+<pre># Dans le défi 7 du cours de POO 2, insérez au moins cinq assertions.</pre>
 </div>
 <div bag="default" created="20181113131237544" modified="20220825111251825" revision="0" tags="$:/tags/Stylesheet" title="css" type="text/css">
 <pre>.boite {
